started troops